# tbhdesktop

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
src/: confetti.browser.min.js  index.html  settingsmodal.js  sound.html  stores.js  tbh.css  tbh.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
