[package]
name = "tbh"
version = "2.2.5"
description = "tbh for your desktop"
authors = ["artifishvr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "updater",
    "fs-create-dir",
    "shell-open",
    "fs-exists",
    "fs-read-file",
    "fs-write-file",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-rich-presence = "0.2.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
